--- a/danted.conf
+++ b/danted.conf
@@ -16,7 +16,7 @@ external: ens3
 socksmethod: none
 # client-rules determine who can connect to the internal interface. The 
 # default of "none" permits anonymous access.
-clientmethod: none
+clientmethod: username
 client pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
         log: connect disconnect error
