--- a/danted.conf
+++ b/danted.conf
@@ -13,10 +13,10 @@ external: ens3
 
 # socks-rules determine what is proxied through the external interface. 
 # The default of "none" permits anonymous access.
-socksmethod: none
+socksmethod: username
 # client-rules determine who can connect to the internal interface. The 
 # default of "none" permits anonymous access.
-clientmethod: username
+clientmethod: none
 client pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
         log: connect disconnect error
