--- a/danted.conf
+++ b/danted.conf
@@ -2,8 +2,12 @@
 logoutput: syslog
 
 user.privileged: root
+user.notprivileged: socksmethod
+user.libwrap: libwrap
+user.unprivileged: socksmethod
+user.ratiolimit: socksmethod
+user.privileged.root: /etc/socks.passwd
 
-user.unprivileged: nobody
 
 # The listening network interface or address.
 internal: 0.0.0.0 port=1080
