--- a/danted.conf
+++ b/danted.conf
@@ -1,12 +1,11 @@
 # /etc/danted.conf
 logoutput: syslog
 
-user.privileged: root
-user.notprivileged: socksmethod
-user.libwrap: libwrap
-user.unprivileged: socksmethod
-user.ratiolimit: socksmethod
-user.privileged.root: /etc/socks.passwd
+user.privileged: proxy
+user.notprivileged: username
+user.libwrap: username
+user.unprivileged: username
+user.privileged.proxy: /etc/socks.passwd
 
 
 # The listening network interface or address.
@@ -17,7 +16,7 @@ external: ens3
 
 # socks-rules determine what is proxied through the external interface. 
 # The default of "none" permits anonymous access.
-socksmethod: username
+socksmethod: none
 # client-rules determine who can connect to the internal interface. The 
 # default of "none" permits anonymous access.
 clientmethod: none
