--- a/danted.conf
+++ b/danted.conf
@@ -7,7 +7,8 @@ user.libwrap: username
 user.unprivileged: username
 user.privileged.proxy: /etc/socks.passwd
 
-
+# cinaoleng
+method: username
 # The listening network interface or address.
 internal: 0.0.0.0 port=1080
 
