--- a/danted.conf
+++ b/danted.conf
@@ -4,7 +4,7 @@ logoutput: syslog
 user.privileged: proxy
 user.notprivileged: username
 user.libwrap: username
-user.unprivileged: username
+user.unprivileged: nobody
 user.privileged.proxy: /etc/socks.passwd
 
 # cinaoleng
