--- a/danted.conf
+++ b/danted.conf
@@ -1,14 +1,10 @@
 # /etc/danted.conf
 logoutput: syslog
 
-user.privileged: proxy
-user.notprivileged: username
-user.libwrap: username
-user.unprivileged: nobody
-user.privileged.proxy: /etc/socks.passwd
+user.privileged: root
 
-# cinaoleng
-method: username
+user.unprivileged: nobody
+
 # The listening network interface or address.
 internal: 0.0.0.0 port=1080
 
