--- a/danted.conf
+++ b/danted.conf
@@ -20,8 +20,10 @@ clientmethod: none
 client pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
         log: connect disconnect error
+        protocol: tcp udp
 }
 socks pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
         log: connect disconnect error
+        protocol: tcp udp
 }
