--- a/danted.conf
+++ b/danted.conf
@@ -19,7 +19,9 @@ socksmethod: none
 clientmethod: none
 client pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
+        log: connect disconnect error
 }
 socks pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
+        log: connect disconnect error
 }
