--- a/danted.conf
+++ b/danted.conf
@@ -1,9 +1,12 @@
 # /etc/danted.conf
-logoutput: syslog
 
-user.privileged: root
+user.privileged: root  
+user.notprivileged: nobody  
+user.libwrap: nobody 
 
-user.unprivileged: nobody
+logoutput: stderr /var/log/danted.log  
+logoutput: syslog 
+
 
 # The listening network interface or address.
 internal: 0.0.0.0 port=1080
@@ -18,10 +21,11 @@ socksmethod: none
 # default of "none" permits anonymous access.
 clientmethod: none
 client pass {
-        from: 0.0.0.0/0 to: 0.0.0.0/0
-        log: connect disconnect error
+    from: 0.0.0.0/0 to: 0.0.0.0/0  
+    protocol: tcp udp
 }
-socks pass {
-        from: 0.0.0.0/0 to: 0.0.0.0/0
-        log: connect disconnect error
+
+pass {
+    from: 0.0.0.0/0 to: 0.0.0.0/0 
+    protocol: tcp udp
 }
