--- a/danted.conf
+++ b/danted.conf
@@ -1,12 +1,9 @@
 # /etc/danted.conf
+logoutput: syslog
 
-user.privileged: root  
-user.notprivileged: nobody  
-user.libwrap: nobody 
+user.privileged: root
 
-logoutput: stderr /var/log/danted.log  
-logoutput: syslog 
-
+user.unprivileged: nobody
 
 # The listening network interface or address.
 internal: 0.0.0.0 port=1080
@@ -21,11 +18,12 @@ socksmethod: none
 # default of "none" permits anonymous access.
 clientmethod: none
 client pass {
-    from: 0.0.0.0/0 to: 0.0.0.0/0  
-    protocol: tcp udp
+        from: 0.0.0.0/0 to: 0.0.0.0/0
+        protocol: tcp udp
+        log: connect disconnect error
 }
-
-pass {
-    from: 0.0.0.0/0 to: 0.0.0.0/0 
-    protocol: tcp udp
+socks pass {
+        from: 0.0.0.0/0 to: 0.0.0.0/0
+        protocol: tcp udp
+        log: connect disconnect error
 }
