--- a/danted.conf
+++ b/danted.conf
@@ -9,7 +9,7 @@ user.unprivileged: nobody
 internal: 0.0.0.0 port=1080
 
 # The proxying network interface or address.
-external: enp1s0
+external: ens3
 
 # socks-rules determine what is proxied through the external interface. 
 # The default of "none" permits anonymous access.
