--- a/danted.conf
+++ b/danted.conf
@@ -2,7 +2,6 @@
 logoutput: syslog
 
 user.privileged: root
-
 user.unprivileged: nobody
 
 # The listening network interface or address.
@@ -11,17 +10,36 @@ internal: 0.0.0.0 port=1080
 # The proxying network interface or address.
 external: ens3
 
-# socks-rules determine what is proxied through the external interface. 
+# socks-rules determine what is proxied through the external interface.
 # The default of "none" permits anonymous access.
-socksmethod: none
-# client-rules determine who can connect to the internal interface. The 
+socksmethod: username
+
+# client-rules determine who can connect to the internal interface. The
 # default of "none" permits anonymous access.
 clientmethod: none
+
 client pass {
-        from: 0.0.0.0/0 to: 0.0.0.0/0
-        log: connect disconnect error
+    from: 0.0.0.0/0 to: 0.0.0.0/0
+    log: connect disconnect error
 }
+
 socks pass {
-        from: 0.0.0.0/0 to: 0.0.0.0/0
-        log: connect disconnect error
+    from: 0.0.0.0/0 to: 0.0.0.0/0
+    log: connect disconnect error
+}
+
+# Authenticated user
+method: pam
+
+client pass {
+    from: 0.0.0.0/0 to: 0.0.0.0/0
+    log: connect disconnect error
+    method: username
+}
+
+pass {
+    from: 0.0.0.0/0 to: 0.0.0.0/0
+    command: bind connect udpassociate
+    log: error
+    method: username
 }
