--- a/danted.conf
+++ b/danted.conf
@@ -29,7 +29,7 @@ socks pass {
 }
 
 # Authenticated user
-method: /etc/danted_passwd
+method: username
 
 client pass {
     from: 0.0.0.0/0 to: 0.0.0.0/0
