--- a/danted.conf
+++ b/danted.conf
@@ -1,6 +1,5 @@
 # /etc/danted.conf
 logoutput: syslog
-
 user.privileged: root
 user.unprivileged: nobody
 
@@ -14,8 +13,8 @@ external: ens3
 # The default of "none" permits anonymous access.
 socksmethod: username
 
-# client-rules determine who can connect to the internal interface. The
-# default of "none" permits anonymous access.
+# client-rules determine who can connect to the internal interface.
+# The default of "none" permits anonymous access.
 clientmethod: none
 
 client pass {
@@ -30,12 +29,6 @@ socks pass {
 
 # Authenticated user
 method: username
-
-client pass {
-    from: 0.0.0.0/0 to: 0.0.0.0/0
-    log: connect disconnect error
-    method: username
-}
 
 pass {
     from: 0.0.0.0/0 to: 0.0.0.0/0
